fix(WelcomePage): Fixed dark theme that was overridden by background property fix(WelcomePage): Fixed get started button elements not centered fix(WelcomePage): Improved waves gradients display

--- a/frontend/web/src/components/WelcomePage/welcomepage.css
+++ b/frontend/web/src/components/WelcomePage/welcomepage.css
@@ -59,7 +59,6 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: linear-gradient(180deg, #e3f0ff 0%, #ffffff 100%);
     position: relative;
     overflow-x: hidden;
 }
@@ -659,10 +658,9 @@ footer > p {
 }
 
 .pres-btn-get-started {
-    background-color: var(--accent-color);
     color: white;
     font-weight: bold;
-    gap: 10px;
+    gap: 8px;
 }
 
 .pres-btn-get-started:hover {
